--- a/gradle.properties
+++ b/gradle.properties
@@ -21,5 +21,5 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
-API_KEY=eda4b96b5694dc96ffafdc3be62fa61b
-CIPHER_KEY=wgoga349t034thqnhu3b4tnqg4039451.;.pp,q23
+API_KEY=
+CIPHER_KEY=
